@@ -31,4 +31,42 @@
         <version>5.6.3</version>
     </dependency>
   </dependencies>
+  <build>
+        <plugins>
+            <!-- Maven Surefire Plugin for Running Tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <suiteXmlFiles>
+            			<suiteXmlFilesuiteXmlFile>testng.xml</suiteXmlFilesuiteXmlFile>
+       				 </suiteXmlFiles>
+                </configuration>
+            </plugin>
+ 
+       
+            
+            <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.8.1</version>
+			    <configuration>
+			        <source>11</source>
+			        <target>11</target>
+			        <compilerArgs>
+			            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+			        </compilerArgs>
+			    </configuration>
+			</plugin>
+ 
+            <!-- Maven Clean Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+ 
+        </plugins>
+    </build>
 </project>
